syntax = "proto3";

package kvmessages ;

option go_package = "github.com/kvstore/kvmessages";

// The greeting service definition.
service KVSevice {
  // Sends a greeting
  rpc ping(PingRequest) returns (PingResponse) {}
  rpc Communicate(stream ServerMessage) returns (stream ServerMessage) {}
}

// The request message containing the user's name.
message PingRequest {
  int32 hello = 1;
  string hostname = 2;
  int32 port = 3;
}

// The response message containing the greetings
message PingResponse {
  int32 hello = 1;
}

message KeyValueMessage {
  string key = 1;
  string value = 2;
}

enum MessageType {
  PING = 0;
  PING_RESPONSE=1;
  KEY_VALUE = 2;
  CLUSTER_INFO_REQUEST = 3;
  CLUSTER_INFO_RESPONSE = 4;
}

message ServerMessage {
  MessageType type = 1;
  oneof content {
    PingRequest ping = 2;
    PingResponse ping_response = 3;
    KeyValueMessage key_value = 4;
    ClusterInfoRequest cluster_info_request = 5;
    ClusterInfoResponse cluster_info_reponse = 6;
  }
}

enum MemberStatus {
  ACTIVE = 0;
  INACTIVE = 1;
  UNKNOWN = 2;
}

message Member {
  string hostname = 1; // Hostname of the cluster member.
  int32 port = 2;      // Port of the cluster member.
  int64 timestamp = 3;
  // MemberStatus status = 4;
  int32 status = 4;

}

message Cluster {
  repeated Member members = 1; // List of members in the cluster.
}

message ClusterInfoRequest {
  Cluster cluster = 1; // The cluster information being sent by the requester.
}

message ClusterInfoResponse {
  enum Status {
    OK = 0;          // The cluster was accepted.
    NEED_UPDATES = 1; // The cluster needs updates.
  }

  Status status = 1;          // Status of the response.
  Cluster cluster = 2;    // merged cluster
}